--- a/style.css
+++ b/style.css
@@ -1,96 +1,131 @@
-:root {
-  font-family: Inter, system-ui, Avenir, Helvetica, Arial, sans-serif;
-  line-height: 1.5;
-  font-weight: 400;
-
-  color-scheme: light dark;
-  color: rgba(255, 255, 255, 0.87);
-  background-color: #242424;
-
-  font-synthesis: none;
-  text-rendering: optimizeLegibility;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
-}
-
-a {
-  font-weight: 500;
-  color: #646cff;
-  text-decoration: inherit;
-}
-a:hover {
-  color: #535bf2;
-}
-
-body {
+* {
+  padding: 0;
   margin: 0;
-  display: flex;
-  place-items: center;
-  min-width: 320px;
+  box-sizing: border-box;
+}
+
+main{
+  width: 100%;
+  /* height: 100vh; */
   min-height: 100vh;
+  background: linear-gradient(180deg, rgba(191, 218, 230, 0.80) 0%,
+      rgba(247, 192, 103, 0.80) 100%),
+    url(<path-to-image>) lightgray 50% / cover no-repeat;
+  /* min-height: 100vh; */
+  padding: 36px 0;
 }
 
 h1 {
-  font-size: 3.2em;
-  line-height: 1.1;
-}
-
-#app {
-  max-width: 1280px;
-  margin: 0 auto;
-  padding: 2rem;
   text-align: center;
+  color: #333;
+  text-align: center;
+  font-size: 56px;
+  font-style: normal;
+  font-weight: 900;
+  line-height: 66px;
+  letter-spacing: 0.56px;
+  margin: 0 auto;
+  width: 703px;
 }
 
-.logo {
-  height: 6em;
-  padding: 1.5em;
-  will-change: filter;
-  transition: filter 300ms;
-}
-.logo:hover {
-  filter: drop-shadow(0 0 2em #646cffaa);
-}
-.logo.vanilla:hover {
-  filter: drop-shadow(0 0 2em #f7df1eaa);
-}
-
-.card {
-  padding: 2em;
-}
-
-.read-the-docs {
-  color: #888;
+.main-p {
+  margin: 24px auto;
+  color: #333;
+  text-align: center;
+  font-size: 24px;
+  font-style: normal;
+  font-weight: 400;
+  line-height: 32px;
+  width: 894px;
 }
 
 button {
-  border-radius: 8px;
-  border: 1px solid transparent;
-  padding: 0.6em 1.2em;
-  font-size: 1em;
+  border-radius: 40px;
+  background: #333;
+  padding: 24px 56px;
+  color: #fff;
+  font-size: 22px;
   font-weight: 500;
-  font-family: inherit;
-  background-color: #1a1a1a;
-  cursor: pointer;
-  transition: border-color 0.25s;
-}
-button:hover {
-  border-color: #646cff;
-}
-button:focus,
-button:focus-visible {
-  outline: 4px auto -webkit-focus-ring-color;
+  line-height: 18px;
+  display: block;
+  margin: 0 auto 66px;
 }
 
-@media (prefers-color-scheme: light) {
-  :root {
-    color: #213547;
-    background-color: #ffffff;
-  }
-  a:hover {
-    color: #747bff;
-  }
-  button {
-    background-color: #f9f9f9;
-  }
+.grid-container {
+  display: inline-grid;
+  grid-template-columns: repeat(5);
+  grid-template-rows: repeat(2, 236px);
+  gap: 16px;
+  padding: 0 64px;
+  text-align: center;
+  margin-left: 10%;
+}
+
+.grid-item {
+  display: flex;
+  flex-direction: column;
+}
+
+.grid-item-1 {
+  background-image: url('./assets/images/home/img-1.png');
+  background-repeat: no-repeat;
+  grid-column: 1 / 2;
+  width: 236px;
+  justify-content: end;
+}
+
+.grid-item-1 p,
+.grid-item-2 p,
+.grid-item-5 p
+ {
+  background: linear-gradient(180deg, rgba(255, 255, 255, 0.00) 0%, rgba(255, 255, 255, 0.82) 100%);
+  padding: 24px;
+  border-radius: 16px;
+}
+
+.grid-item-2 {
+  background-image: url('./assets/images/home/img-2.png');
+  background-repeat: no-repeat;
+  grid-column: 2 / 3;
+  width: 236px;
+  justify-content: end;
+}
+
+.grid-item-3 {
+  background-image: url('./assets/images/home/img-3.png');
+  background-repeat: no-repeat;
+  grid-column: 1 / 3;
+  grid-row: 2 / 3;
+  width: 491px;
+  align-items: start;
+  padding: 24px;
+}
+
+.grid-item-4 {
+  background-image: url('./assets/images/home/img-4.png');
+  background-repeat: no-repeat;
+  grid-column: 3 / 5;
+  grid-row: 1 / 3;
+  width: 491px;
+  align-items: end;
+  padding: 24px;
+}
+
+.grid-item-5 {
+  background-image: url('./assets/images/home/img-5.png');
+  background-repeat: no-repeat;
+  grid-row: 1 / 2;
+  grid-column: 5 / 6;
+  width: 301px;
+  justify-content: end;
+}
+
+.grid-item-6 {
+  background-image: url('./assets/images/home/img-6.png');
+  background-repeat: no-repeat;
+  grid-row: 2 / 3;
+  grid-column: 5 / 6;
+  width: 301px;
+  justify-content: end;
+  padding: 24px;
 }
